--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,16 +27,17 @@
     "@types/node": "^22.13.10",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
-    "@typescript-eslint/utils": "^7.18.0",
+    "@typescript-eslint/eslint-plugin": "^8.26.1",
+    "@typescript-eslint/parser": "^8.26.1",
+    "@typescript-eslint/utils": "^8.26.1",
     "@vitejs/plugin-react": "^4.0.1",
-    "eslint": "^8.57.1",
+    "eslint": "^9.22.0",
     "eslint-plugin-prettier": "^5.2.3",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.1",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^16.0.0",
     "prettier": "^3.5.3",
-    "typescript": "^5.1.6",
+    "typescript": "^5.8.2",
     "vite": "^4.4.0"
   }
 }
