chore(docker): agregar configuración para levantarlo con docker
- Agregar tipos para las variables configuradas del monorepo
- Agregar archivos del docker de cada repo
- Agregar archivo docker compose para orquestar la construcción de los repos en conjunto

--- a/config.json
+++ b/config.json
@@ -8,5 +8,15 @@
       "host": "http://localhost:8000",
       "port": 8000
     }
+  },
+  "production": {
+    "frontend": {
+      "url": "http://localhost:5173",
+      "api_url": "http://localhost:8000/api"
+    },
+    "backend": {
+      "host": "http://localhost:8000",
+      "port": 8000
+    }
   }
 }
